<resources>
    <string name="app_name">ToDo App</string>
    <!-- OnBoardingFragment -->
    <string name="onboarding_slogan">Save and share notes</string>
    <string name="onboarding_createaccount">Create account</string>
    <string name="onboarding_have_an_account">Have an account?</string>
    <string name="onboarding_login">Log in</string>

    <!-- LoginFragment -->
    <string name="Login_login">Log in</string>
    <string name="Login_password_hint">Password</string>
    <string name="Login_email_hint">Email</string>
    <string name="Login_forgotpassword">Forgot password?</string>
    <string name="Login_term">By continuing, you agree to our Terms of Service and Privacy Policy.</string>

    <!-- SignupFragment -->
    <string name="Signup_signup">Sign up</string>
    <string name="Signup_username">User name</string>
    <string name="Signup_enter_password">Enter your password</string>
    <string name="Signup_enter_confirm_password">Confirm password</string>

    <!-- MainFragment -->
    <string name="Main_category_others">Others</string>
    <string name="Main_category_work">Work</string>
    <string name="Main_category_academic">Academic</string>
    <string name="Main_category_personal">Personal</string>
    <string name="Main_welcome">Welcome!</string>
    <string name="Main_note_taking_app">Note-Taking App</string>
    <string name="Notelist_search">Search</string>
    <string name="Notelist_back">Back</string>
    <string name="Main_addtodo">Add new to do</string>

    <!-- NoteDetailFragment -->
    <string name="NoteDetail_back">Back</string>
    <string name="NoteDetail_notfound">To do not found!!!</string>
    <string name="Notedetail_titletv">Title:</string>
    <string name="Notedetail_descriptiontv">Description:</string>
    <string name="Notedetail_prioritytv">Priority:</string>
    <string name="Notedetail_categorytv">Category:</string>
    <string name="Notedetail_updatebtn">Update</string>
    <string name="Notedetail_deletebtn">Delete</string>

    <!-- AddNoteFragment -->
    <string name="Addnote_title">Title</string>
    <string name="Addnote_description">Description</string>
    <string name="Addnote_priority">Priority</string>
    <string name="Addnote_category">Category</string>
    <string name="Addnote_addbtn">Add</string>
    <string name="Addnote_titleTV">Title:</string>
    <string name="Addnote_descriptionTV">Description:</string>
    <string name="Addnote_priorityTV">Priority:</string>
    <string name="Addnote_categoryTV">Category:</string>
    <string name="Notedetail_note_detail">Note Detail</string>


    <string-array name="priority">
        <item></item>
        <item>1 - Do it IMMEDIATELY please!!!</item>
        <item>2 - Do it ASAP @@</item>
        <item>3 - Do it</item>
        <item>4 - I will do it later</item>
        <item>5 - Umm…Ehhh</item>
    </string-array>

    <string-array name="category">
        <item></item>
        <item>Personal</item>
        <item>Academic</item>
        <item>Work</item>
        <item>Others</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Resetpassword_reset_password">Reset Password</string>
    <string name="Resetpassword_submit">Submit</string>
</resources>