<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.fragment.note.AddNoteFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.main.fragment.note.AddNoteFragment"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/Addnote_title"
            android:inputType="text"
            android:autofillHints=""
            android:background="@null"/>

        <EditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Addnote_description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top|start"
            android:background="@null"/>

        <Spinner
            android:id="@+id/prioritySP"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/Addnote_priority"
            android:inputType="number"
            android:background="@null"
            android:entries="@array/priority" />

        <EditText
            android:id="@+id/categoryET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/Addnote_category"
            android:inputType="text"
            android:background="@null"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Addnote_addbtn" />
    </LinearLayout>
</ScrollView>