<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.fragment.LoginFragment"
    android:padding="16dp">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-20dp"
        android:text="@string/Signup_signup"
        android:textColor="@color/selectedItem"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:background="@null">

        <EditText
            android:id="@+id/usernameET_Signup"
            android:layout_width="358dp"
            android:layout_height="52dp"
            android:layout_marginTop="76dp"
            android:background="@null"
            android:hint="@string/Signup_username"
            android:padding="16dp"
            tools:ignore="Autofill,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameContainer"
        android:background="@null">

        <EditText
            android:id="@+id/emailET_Signup"
            android:layout_width="358dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/Login_email_hint"
            android:padding="16dp"
            tools:ignore="Autofill,TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/Signup_enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
        app:passwordToggleDrawable="@drawable/ic_showpassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET_Signup"
            android:layout_width="358dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:inputType="textPassword"
            android:padding="16dp"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/Signup_enter_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
        app:passwordToggleDrawable="@drawable/ic_showpassword"
        app:passwordToggleEnabled="true"
        tools:ignore="NotSibling">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordET_Signup"
            android:layout_width="358dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="16dp"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/Login_term"
        android:textColor="@color/mainText"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordContainer"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/mainTheme"
        android:text="@string/Signup_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />


</androidx.constraintlayout.widget.ConstraintLayout>