<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.main.fragment.note.NoteDetailFragment"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/backTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notelist_back"
            android:textColor="@color/mainTheme"
            app:layout_constraintStart_toEndOf="@+id/backIV"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/categoryNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/Notedetail_note_detail"
            android:textColor="@color/mainText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity= "center"
            android:layout_marginStart="90dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/titleRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                tools:ignore="NotSibling">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Notedetail_titletv"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/noteTitleET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textSize="20sp"
                    android:background="@null"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:id="@+id/descriptionRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleRow">

                <TextView
                    android:id="@+id/descriptionTV"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Notedetail_descriptiontv"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/noteDescriptionET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textSize="20sp"
                    android:background="@null"
                    tools:ignore="LabelFor,TextFields, Autofill" />
            </TableRow>

            <TableRow
                android:id="@+id/priorityRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionRow">

                <TextView
                    android:id="@+id/priorityTV"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Notedetail_prioritytv"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/notePriorityET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:importantForAutofill="no"
                    android:textSize="20sp"
                    android:background="@null"
                    tools:ignore="LabelFor,TextFields" />
            </TableRow>

            <TableRow
                android:id="@+id/categoryRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priorityRow">

                <TextView
                    android:id="@+id/categoryTV"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Notedetail_categorytv"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/noteCategoryET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textSize="20sp"
                    android:background="@null"
                    tools:ignore="LabelFor,TextFields, Autofill" />
            </TableRow>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:paddingTop="10dp"
            android:text="@string/Notedetail_updatebtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:paddingTop="10dp"
            android:text="@string/Notedetail_deletebtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>